--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Enterprise de web design à Lyon - La Panthere, expertise en web design">
-    <meta name="description" content="">
+    <meta name="description" content="L'agence La Panthère est une agence de web design qui aide les enterprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -41,7 +41,7 @@
 		<nav class="navbar row" aria-label="navigation">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" title="lyon web design logo" height="40" />
+					<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La panthere agence web" title="lyon web design logo" height="40" />
 				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -53,7 +53,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -67,7 +67,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web lyon, création logo lyon" title="création logo lyon"/>
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère logo" title="création logo lyon"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -85,7 +85,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img title="agence web lyon design" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title.png" />
+				<h3 class="mg-md text-center tc-gray small-titles">
+					L'agence La Panthère est une agence de web design qui aide les enterprises à devenir attractives et visibles sur Internet.
+				</h3>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -96,7 +98,7 @@
 				<h2 class="mg-md text-center">
 					Web design
 				</h2>
-				<p class="text-center">
+				<p class="text-center small-titles-4">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -107,7 +109,7 @@
 				<h2 class="mg-md text-center">
 					&nbsp;Stratégie
 				</h2>
-				<p class="text-center ">
+				<p class="text-center small-titles-4">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -118,15 +120,16 @@
 				<h2 class="mg-md text-center">
 					Illustrations
 				</h2>
-				<p class="text-center ">
+				<p class="text-center small-titles-4">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img title="stratégie web lyon" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.png" />
-
+				<h3 class="mg-md text-center tc-gray small-titles-2">
+					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre enterprise et à l'intergrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>Maxime Guibard, PDG de A vos fourchettes
+				</h3>
 			</div>
 		</div>
 	</div>
@@ -138,10 +141,10 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h3 class="mg-md text-center tc-white">
+				<h3 class="mg-md text-center tc-white small-titles-3">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h3>
-				<p class="text-center white">
+				<p class="text-center white small-titles-4">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
@@ -155,18 +158,20 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img title="agence web lyon" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.png" />
+				<h3 class="mg-md text-center tc-gray small-titles">
+					Nous travaillons avec beaucoup de clients, voici nos réalisations.
+				</h3>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/1.jpg" title="logo agence web meilleure" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+					<img src="img/1.jpg" title="logo agence web meilleure" alt="photo fille photo-stand" class="img-responsive portfolio-thumb" />
 				</a>
-				<h4 class="mg-md text-center">
+				<h4 class="mg-md text-center small-titles-3">
 					Refonte d'un site web pour un journal local
 				</h4>
-				<p class="text-center">
+				<p class="text-center small-titles-4">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
@@ -174,10 +179,10 @@
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 					<img src="img/2.jpg" class="img-responsive portfolio-thumb" title="logo agence web" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" />
 				</a>
-				<h4 class="mg-md text-center">
+				<h4 class="mg-md text-center small-titles-3">
 					Création d'un site web pour photographes
 				</h4>
-				<p class="text-center">
+				<p class="text-center small-titles-4">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
 			</div>
@@ -185,23 +190,23 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-					<img src="img/3.bmp" class="img-responsive portfolio-thumb" title="lyon web design" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/>
+					<img src="img/3.bmp" class="img-responsive portfolio-thumb" title="lyon web design" alt="photo cameras"/>
 				</a>
-				<h4 class="mg-md text-center">
+				<h4 class="mg-md text-center small-titles-3">
 					Création d'un site internet pour un voyageur
 				</h4>
-				<p class="text-center">
+				<p class="text-center small-titles-4">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-					<img src="img/4.bmp" class="img-responsive portfolio-thumb" title="lyon agence web" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
+					<img src="img/4.bmp" class="img-responsive portfolio-thumb" title="lyon agence web" alt="photo desktop workspace" />
 				</a>
-				<h4 class="mg-md text-center">
+				<h4 class="mg-md text-center small-titles-3">
 					Conception d'un site pour une agence de mariage
 				</h4>
-				<p class="text-center">
+				<p class="text-center small-titles-4">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
 			</div>
@@ -214,7 +219,7 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h3 class="mg-md text-center tc-white">
+			<h3 class="mg-md text-center tc-white small-titles-3">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h3>
 			<div class="col-sm-12 text-center">
@@ -255,45 +260,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagenceslyon.com">meilleuresagenceslyon.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-						</ul>
-					</div>
-				</div>
+			
 			</div>
 		</div>
 	</div>
