--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -37,7 +36,7 @@
 		<nav class="navbar row" aria-label="navigation">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40" />
+					<img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthere" height="40" />
 				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -49,7 +48,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
