--- a/index.html
+++ b/index.html
@@ -240,24 +240,16 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
+							<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
+							<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
+							<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
+							<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 					</div>
 				</div>
 			
