--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h3 class="mg-md text-center tc-gray small-titles">
+				<h2 class="mg-md text-center tc-gray small-titles">
 					L'agence La Panthère est une agence de web design qui aide les enterprises à devenir attractives et visibles sur Internet.
-				</h3>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -240,16 +240,16 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-							<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-							<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-							<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 					</div>
 					<div class="col-sm-3">
-							<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 					</div>
 				</div>
 			
